log
Wed 12 Apr 2023 07:46:12 PM UTC: 
 tests:  0|6
total_score: 0/70
d2e4e3e
Wed 12 Apr 2023 08:06:19 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
1bb5676
Wed 12 Apr 2023 08:11:04 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|6
total_score: 0/70
ef0df41
Wed 12 Apr 2023 08:12:47 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
56ae68e
Wed 12 Apr 2023 08:13:53 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
498c168
Wed 12 Apr 2023 08:14:05 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
0153a6b
Wed 12 Apr 2023 08:14:19 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
0e3ce36
Wed 12 Apr 2023 10:07:35 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:12: error: ‘*mapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   62 |        mapa->buckets[i]=NULL;
      |        ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
864f773
Wed 12 Apr 2023 10:07:49 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
493ba5a
Wed 12 Apr 2023 10:08:51 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
57a4067
Wed 12 Apr 2023 10:20:29 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:10: error: unused variable ‘indice’ [-Werror=unused-variable]
   44 |     long indice=hash( key,map->capacity);
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
6c78e47
Wed 12 Apr 2023 10:29:38 PM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  5|4
total_score: 30/70
46bc2cb
Wed 12 Apr 2023 10:30:20 PM UTC: 
 hashmap.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  2|5
total_score: 20/70
e41ee4a
Wed 12 Apr 2023 10:30:46 PM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
547b04c
Wed 12 Apr 2023 10:33:26 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
2331110
Wed 12 Apr 2023 10:34:20 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:17: error: comparison between pointer and integer [-Werror]
   46 |     while(indice!=NULL){
      |                 ^~
cc1: all warnings being treated as errors
Compilation failed
8e72f75
Wed 12 Apr 2023 10:34:26 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:17: error: comparison between pointer and integer [-Werror]
   46 |     while(indice==NULL){
      |                 ^~
cc1: all warnings being treated as errors
Compilation failed
ab5f1c4
Wed 12 Apr 2023 10:35:01 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
b6b8efc
